--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,14 @@ edition = "2021"
 [dependencies]
 rand = "0.8.5"
 iced = "0.12"
+
+#axum
+axum = "0.7.4"
+tokio = { version = "1.36.0", features = ["full"] }
+
+#serde
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = "1.0.113"
+
+#env 
+dotenvy = "0.15.7"
