--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ minijinja = "2.0.1"
 #axum
 axum = "0.7.4"
 tokio = { version = "1.36.0", features = ["full"] }
+tower = { version = "0.4.13", features = ["full"] }
+tower-http = { version = "0.5.2", features = ["full"] }
 
 #serde
 serde = { version = "1.0.196", features = ["derive"] }
